@@ -15,6 +15,9 @@ Here is a history of user visible changes to Mailman.
     - IncomingRunner now logs rejected messages to the vette log.
       (LP: 1068837)
 
+    - The name of the mailmanctl master lock file is now congigurable via the
+      mm_cfg.py setting MASTER_LOCK_FILE.  (LP: 1082308)
+
   i18n
 
     - German message catalog has been updated per Ralf Hildebrandt.
